--- a/_config.yml
+++ b/_config.yml
@@ -36,3 +36,11 @@ kramdown:
 
 permalink: pretty
 exclude: [vendor]
+
+defaults:
+  - 
+    scope:
+      path: ""
+      type: "posts"
+    values:
+        layout: "post"
